--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Noto+Sans+SC:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+  font-family: 'Noto Sans', 'Noto Sans SC', system-ui, sans-serif;
+}
+
+
 $themeColorList: (
   #2196f3,
   #f44336,
