--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -69,8 +69,8 @@
   }
 
   // Image
-  .mdx-image {
-    @applay my-6;
+  .mdx-img {
+    @apply my-6 rounded-md;
   }
 
   // List
@@ -96,5 +96,15 @@
       min-width: 20px;
       font-feature-settings: "tnum";
     }
+  }
+  
+  // Inline Code
+  .mdx-inline-code {
+    @apply inline-block rounded bg-zinc-400/10 px-1 text-sm font-medium text-primary-dark
+  }
+
+  // CodeBlock
+  .mdx-fenced-codeblock {
+    @apply overflow-x-auto p-4 text-sm rounded-md;
   }
 }
