--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -45,7 +45,7 @@
 
   // Paragraph
   .mdx-p {
-    @apply my-4;
+    @apply mb-4;
   }
 
   // Blockquote
@@ -119,7 +119,7 @@
 
   // CodeBlock
   .mdx-fenced-codeblock {
-    @apply overflow-x-auto rounded-md p-4 text-sm;
+    @apply overflow-x-auto rounded-md p-4 text-sm mb-4;
   }
 
   //link
