--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -114,7 +114,7 @@
 
   // Inline Code
   .mdx-inline-code {
-    @apply inline-block rounded bg-zinc-400/10 px-1 text-sm font-medium text-primary-dark;
+    @apply inline-block rounded bg-zinc-400/10 px-1 text-sm text-primary-dark;
   }
 
   // CodeBlock
@@ -124,7 +124,7 @@
 
   //link
   .mdx-a:not([class~="anchor"]) {
-    @apply font-medium text-primary underline decoration-primary/20 underline-offset-4 transition hover:decoration-primary;
+    @apply text-primary underline decoration-primary/20 underline-offset-4 transition hover:decoration-primary;
     .mdx-inline-code {
       @apply text-primary;
     }
