--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -114,7 +114,7 @@
 
   // Inline Code
   .mdx-inline-code {
-    @apply inline-block rounded bg-zinc-400/10 px-1 text-sm text-primary-dark;
+    @apply inline-block rounded bg-zinc-400/10 px-1 text-sm font-semibold text-primary-dark;
   }
 
   // CodeBlock
@@ -124,9 +124,9 @@
 
   //link
   .mdx-a:not([class~="anchor"]) {
-    @apply text-primary underline decoration-primary/20 underline-offset-4 transition hover:decoration-primary;
+    @apply text-primary font-medium underline decoration-primary/20 underline-offset-4 transition hover:decoration-primary;
     .mdx-inline-code {
-      @apply text-primary;
+      @apply text-current;
     }
   }
 }
