Change ul and p style

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -1,5 +1,5 @@
 .markdown-body {
-  @apply break-words text-base text-primary-dark;
+  @apply break-words text-base text-black;
 
   // Heading
   .anchor {
