--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,14 +5,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Noto+Sans+SC:wght@100..900&family=Noto+Sans:ital,wdth,wght@0,62.5..100,100..900;1,62.5..100,100..900&display=swap');
 
 $themeColorList: (
-  #2196f3,
-  #f44336,
-  #9c27b0,
-  #4caf50,
-  #3f51b5,
-  #795548,
-  #607d8b,
-  #009688
+  #0891b2
+  #db2777
+  #ea580c
+  #16a34a
 );
 
 @function getColorValue($color) {
