Improve: Reduce codeblock text size.

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -119,7 +119,7 @@
   
     // CodeBlock
     .mdx-fenced-codeblock {
-      @apply p-6 text-base font-medium leading-7;
+      @apply p-6 text-sm font-medium leading-7;
     }
   
     //link
