feat: add Shiki code highlight
- Remove prism-react-renderer
- Will add more shikijs/transformers later to highlight code
- Remove pre tag in mdx component. Maybe it would be more appropriate to move it in a rehype plug. ( later...

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -118,7 +118,10 @@
 
     // CodeBlock
     .mdx-fenced-codeblock {
-      @apply max-h-[36rem] p-6 text-sm font-medium leading-7;
+      @apply py-6;
+      code {
+        @apply block max-h-[36rem] pl-6 text-sm leading-6;
+      }
     }
 
     //link
