[fix]: wrong code highlight width when is width smaller than code block

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -126,7 +126,7 @@
         @apply max-h-[36rem] overflow-auto p-6;
       }
       code {
-        @apply block text-sm w-fit leading-6;
+        @apply block text-sm w-fit leading-6 min-w-full;
         .remove,
         .add,
         .highlighted {
