--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,34 +1,39 @@
+@use "sass:color";
+@use "sass:list";
+@use 'animation.scss';
+
 @tailwind base;
 @tailwind components;
 
 $themeColorList: (#0891b2 #16a34a #ea580c #db2777);
 
+
 @function getColorValue($color) {
-  @return #{red($color)} #{green($color)} #{blue($color)};
+  @return #{color.channel($color, "red", $space: rgb)} #{color.channel($color, "green", $space: rgb)} #{color.channel($color, "blue", $space: rgb)};
 }
 
 @mixin theme-primary-map($primary-color) {
   --color-primary-bg: #{getColorValue(#fff)};
-  --color-primary-dark: #{getColorValue(mix($primary-color, black, 40%))};
+  --color-primary-dark: #{getColorValue(color.mix($primary-color, black, 40%))};
   --color-primary: #{getColorValue($primary-color)};
-  --color-primary-small: #{getColorValue(mix($primary-color, white, 65%))};
-  --color-primary-medium: #{getColorValue(mix($primary-color, white, 40%))};
-  --color-primary-light: #{getColorValue(mix($primary-color, white, 15%))};
-  --color-primary-extralight: #{getColorValue(mix($primary-color, white, 10%))};
+  --color-primary-small: #{getColorValue(color.mix($primary-color, white, 65%))};
+  --color-primary-medium: #{getColorValue(color.mix($primary-color, white, 40%))};
+  --color-primary-light: #{getColorValue(color.mix($primary-color, white, 15%))};
+  --color-primary-extralight: #{getColorValue(color.mix($primary-color, white, 10%))};
 }
 
 @mixin theme-primary-dark-map($primary-color) {
   --color-primary-bg: #{getColorValue(#161616)};
-  --color-primary-dark: #{getColorValue(mix($primary-color, white, 40%))};
+  --color-primary-dark: #{getColorValue(color.mix($primary-color, white, 40%))};
   --color-primary: #{getColorValue($primary-color)};
-  --color-primary-small: #{getColorValue(mix($primary-color, black, 65%))};
-  --color-primary-medium: #{getColorValue(mix($primary-color, white, 40%))};
-  --color-primary-light: #{getColorValue(mix($primary-color, white, 15%))};
-  --color-primary-extralight: #{getColorValue(mix($primary-color, white, 5%))};
+  --color-primary-small: #{getColorValue(color.mix($primary-color, black, 65%))};
+  --color-primary-medium: #{getColorValue(color.mix($primary-color, white, 40%))};
+  --color-primary-light: #{getColorValue(color.mix($primary-color, white, 15%))};
+  --color-primary-extralight: #{getColorValue(color.mix($primary-color, white, 5%))};
 }
 
-@for $i from 1 through length($themeColorList) {
-  $color: nth($themeColorList, $i);
+@for $i from 1 through list.length($themeColorList) {
+  $color: list.nth($themeColorList, $i);
   .theme-#{$i} {
     @include theme-primary-map($color);
   }
@@ -41,4 +46,3 @@ $themeColorList: (#0891b2 #16a34a #ea580c #db2777);
 
 @tailwind utilities;
 
-@import 'animation.scss';
